--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-p {background-color: blue}
-p {color: white}
-h4 {color:red;}
-body {background: yellow}
+h2 {color:  #698474 ;background-color: #dee3e2; border: 1px solid black}
+p {text-align: center;}
+p {color: black}
+p {font-family: monospace;}
+p {font-size: 12px}
